--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ include:
   - PULL_REQUEST_TEMPLATE.md
 
 theme: jekyll-theme-cayman
-title: 28B Rings and Fields
-name: 28B Rings and Fields
+title: 28B Intro to Rings and Fields
+name: 28B Intro to Rings and Fields
